changes in seller controller
